kube-menifest/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadate:
  name: app-deploymen
  namespace: prod
  labels:
    app: app-dep
    author: Tawfeeq
spec:
  replicas: 3
  strategy:
    type: RolingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLables:
      app: app-dep
  template:
    metadate:
      labels:
        app: app-dep
    spec:
      containers:
        - name: app
          image: tawfeeq421/java-app
          ports:
            - containerPort: 8080
          resources:
            rquests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 240Mi
          livenessPrrobe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
