kube-menifest/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-sservice
  labels:
    name: app-ser
    author: Tawfeeq
spec:
  type: ClusterIP
  ports:
    - targetPort: app-port
      port: 80
      protocol: TCP
  selector:
    app: app-dep
